# xhelix

./: .gitignore  ARCHITECTURE.md  AUTO_ADVISOR.md  BEHAVIORAL_DEFENSE.md  CI_CD_GUARD.md  CLAUDE.md  CONTAINMENT_DESIGN.md  CROWN_JEWEL_PROFILE.md  DATA_LEAK_FABRIC.md  DEFENSE_PRIORITIES.md  ENTERPRISE_ARCHITECTURE.md  ERRORS.md  FULL_TAKEOVER_DETECTION.md  LICENSE  Makefile  NOTICE  POST_COMPROMISE_DEFENSE.md  PROTECTED_SERVICES_TRAP.md  README.md  REFACTOR_ROADMAP.md  ROADMAP.md  SUPPLY_CHAIN_DEFENSE.md  ZERO_DAY_GUARDIAN.md  go.mod  go.sum  xhelix-dnspoison  xhelix-honeysh
.github/workflows/: ci.yml
apps/extension/: background.js  content.js  manifest.json
cmd/mynetgate/: cache.go  e2e_test.go  main.go  main_test.go
cmd/xhelix/: containment.go  credbroker_emitter.go  credbroker_load.go  doctor.go  enforce_wiring.go  foundation.go  handlers_enforce.go  handlers_policy.go  handlers_process.go  incident_sink.go  incidents_http.go  livehub.go  main.go  (+12 more)
cmd/xhelix-bridge/: main.go
cmd/xhelix-dnspoison/: main.go
cmd/xhelix-graph-server/: main.go
cmd/xhelix-honeysh/: main.go
cmd/xhelix-sinkhole/: main.go
cmd/xhelix-verify/: main.go
cmd/xhelix-watchdog/: main.go
docs/: ARCHITECTURE.md  FEATURE_MATRIX_AND_TEST_PLAN_2026-05-22.md  KILL_CHAIN_COVERAGE.md  PROGRESS_2026-05-22_SESSION2.md  REAL_USE_CASES.html  REAL_USE_CASES.md  ROADMAP.md  SCENARIOS.md  XGENGUARDIAN_INTEGRATION_SPEC.md
examples/: config-container-host.yaml  config-desktop.yaml  config-server.yaml
scripts/: test-setup.sh
sensors/: sensor.go
watchdog/: Cargo.toml
watchdog/src/: main.rs
(+890 files in other folders)
